@@ -23,13 +23,13 @@ import argonms.common.LocalServer;
 import argonms.common.ServerType;
 import argonms.common.loading.DataFileType;
 import argonms.common.loading.item.ItemDataLoader;
+import argonms.common.net.external.CheatTracker;
 import argonms.common.net.external.ClientListener;
 import argonms.common.net.external.ClientListener.ClientFactory;
 import argonms.common.net.internal.RemoteCenterSession;
 import argonms.common.util.DatabaseManager;
 import argonms.common.util.DatabaseManager.DatabaseType;
 import argonms.common.util.Scheduler;
-import argonms.common.util.TimeTool;
 import argonms.login.net.LoginWorld;
 import argonms.login.net.external.ClientLoginPacketProcessor;
 import argonms.login.net.external.LoginClient;
@@ -49,6 +49,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Scanner;
 import java.util.TimeZone;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -210,6 +211,19 @@ public class LoginServer implements LocalServer {
 			LOG.log(Level.SEVERE, "Could not connect to database!", e);
 			System.exit(3);
 			return;
+		}
+
+		Scanner scan = null;
+		try {
+			scan = new Scanner(new FileReader(System.getProperty("argonms.ct.macbanblacklist.file", "macbanblacklist.txt")));
+			CheatTracker.setBlacklistedMacBans(scan);
+		} catch (IOException ex) {
+			LOG.log(Level.SEVERE, "Could not load macban blacklist!", ex);
+			System.exit(3);
+			return;
+		} finally {
+			if (scan != null)
+				scan.close();
 		}
 
 		Scheduler.enable(true, true);
