@@ -2774,6 +2774,12 @@
 	the map when cast.
 	* Fixed Meso Guard not working.
 
+2013-02-19  GoldenKevin  (revision 203)
+
+	* Added support for blacklisting certain MAC addresses from being added to
+	the `macbans` table if the MAC address is likely to be duplicated on
+	multiple clients.
+
 Copyright 2011-2013 GoldenKevin
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
